--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="icon" href="https://res.cloudinary.com/dp92qug2f/image/upload/v1677615253/posua/posualogo-removebg-preview_hqbkji.png" />
+    <link
+      rel="icon"
+      href="https://res.cloudinary.com/dp92qug2f/image/upload/v1677615253/posua/posualogo-removebg-preview_hqbkji.png"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Philosopher&display=swap"
       rel="stylesheet"
