--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       rel="stylesheet"
     />
     <title>Posua 2023</title>
+    <base href="/">
   </head>
   <body>
     <div id="root"></div>
