UPDATE: about us

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       crossorigin="anonymous"
     />
     <title>Posua 2023</title>
-    <base href="/">
+    <base href="/" />
   </head>
   <body>
     <div id="root"></div>
